# ITIL_App_Back

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.migrate  LICENSE  README.md  docker-compose.yml  env.example  env.test.example  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
db/: Cargo.toml  README.md
db/.sqlx/: query-030d8c0a01fb89019392619fde4a9d49303f2a0586dd281129b543592eda0120.json  query-110692341a0a4d978f52aa92256ab7c8ba7db1d33aa19c34fdd0f3e733cdd89a.json  query-1a5aef8b7176cf1855fb66f940f074ed2fc85079137a6720e16d1ee88cfaa3d2.json  query-1b21384f1b5ffe313de54b17b0dc72560f2413ad0597def4f250e671cee05be1.json  query-21e41873a3a608d3eb90951531f3e4638aa0fa71b92c2d562ad89c74c81146e1.json  query-21fa7e5f439041f91b528aad30ea5d362d70bab270bf81f6fb6a1b4b8fdefa6d.json  query-223d56634159de89fb343423b01ed8a82e973884903b7497ad2bf9dee41f7da2.json  query-258a4b41f1b7046cb93f72c1b058cdac7ab6a2397b094fa4513e7a3f7a285943.json  query-25ee5c557a7579dca3185e1ebd16fc46084c81adfb696c7555402d44dfb934ef.json  query-280a9478936e07a7ce7ad7ed2633c3d7faff81b1ac9fec3bd2a0afadfd955d8d.json  query-2d3599b806a699f7475a87b3d7d99a007052ecd3b0f4ce0aea1b44b5e68bc9ca.json  query-314c13d06e7fcd14da5d1117507f31200b3b2b1029ade9137b897d80cd6195bc.json  query-31b8b4dd64feca2ee0fc1b4ebcdca68dd823051885a129a6e959cf27ecee02e7.json  query-320b0d6578c1557d2e553c2571928f44c3fcbcdce9e6d92aa2c573f683514e33.json  query-36a3d97300983a050ede6b403b15047379cab805a1b21d812cbd7cdc2c896f77.json  query-3e8c00a60d20cf45392e816e7d8590617dfbfafe95139260beb982d532af2789.json  query-408472e050fe6efbca0d41a3a09813453a36538f2df667e8f38448f27d64d936.json  query-43ec986ede3d51248f8174e738d402190374ffde85be0e10e8de09f9900548de.json  (+44 more)
db/migrations/: 1758661729__create_ci.sql  1763481023__create_rfcs.sql  (+7 more)
macros/: Cargo.toml  README.md
web/: Cargo.toml  README.md
web/src/: apidoc.rs  error.rs  lib.rs  main.rs  routes.rs  shutdown.rs  state.rs
web/src/controllers/: changes.rs  configitems.rs  configuration.rs  health.rs  incidents.rs  mod.rs  problems.rs
web/src/controllers/changes/: incident_relations.rs  problem_relations.rs
web/src/controllers/configuration/: changes.rs
web/src/controllers/incidents/: ci_relations.rs
web/src/controllers/problems/: incident_relations.rs
web/src/test_helpers/: mod.rs
web/tests/api/: changes_test.rs  ci_changes_test.rs  configitems_test.rs  configuration_test.rs  incidents_ci_relations_test.rs  incidents_test.rs  main.rs  problem_incident_relations_test.rs  problems_test.rs  rfc_incident_relations_test.rs  rfc_problem_relations_test.rs
(+15 files in other folders)
