[package]
name = "itil-back-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:serde_json", "dep:tower", "dep:hyper", "dep:itil-back-macros"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
itil-back-config = { path = "../config" }
itil-back-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
uuid = { version = "1.6", features = ["serde"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
validator = "0.20"
itil-back-macros = { path = "../macros", optional = true }

[dev-dependencies]
fake = "4.0"
googletest = "0.14"
itil-back-db = { path = "../db", features = ["test-helpers"] }
itil-back-web = { path = ".", features = ["test-helpers"] }
